[gd_scene load_steps=3 format=3 uid="uid://csong_complete_menu"]

[ext_resource type="Script" path="res://UI/SongCompleteMenu.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://ddo7ybrfl5d2s" path="res://fonts/FUSION-PIXEL-12PX-MONOSPACED-ZH_HANS.OTF" id="2_font"]

[node name="SongCompleteMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -140.0
offset_right = 150.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
modulate = Color(1, 1, 1, 0.95)

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="TitleLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
text = "歌曲完成！"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = "分数: 0
消除行数: 0"
horizontal_alignment = 1

[node name="Separator2" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = "重新开始"

[node name="SelectSongButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = "选择歌曲"

[node name="MenuButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = "返回主菜单"
