extends Control

signal restart_game
signal select_song
signal goto_menu

@onready var panel = $Panel
@onready var title_label = $Panel/VBox/TitleLabel
@onready var score_label = $Panel/VBox/ScoreLabel
@onready var restart_button = $Panel/VBox/RestartButton
@onready var select_song_button = $Panel/VBox/SelectSongButton
@onready var menu_button = $Panel/VBox/MenuButton

var TEXTS = {
	"zh": {
		"title": "æ­Œæ›²å®Œæˆï¼",
		"score": "åˆ†æ•°: %d",
		"lines": "æ¶ˆé™¤è¡Œæ•°: %d",
		"high_score": "æœ€é«˜åˆ†: %d",
		"high_lines": "æœ€é«˜æ¶ˆé™¤: %d",
		"new_record": "ğŸ‰ æ–°çºªå½•ï¼",
		"restart": "é‡æ–°å¼€å§‹",
		"select_song": "é€‰æ‹©æ­Œæ›²",
		"menu": "ä¸»èœå•"
	},
	"en": {
		"title": "Song Complete!",
		"score": "Score: %d",
		"lines": "Lines: %d",
		"high_score": "High Score: %d",
		"high_lines": "High Lines: %d",
		"new_record": "ğŸ‰ New Record!",
		"restart": "Restart",
		"select_song": "Select Song",
		"menu": "Main Menu"
	}
}

func _ready():
	update_ui_texts()
	restart_button.pressed.connect(_on_restart_button_pressed)
	select_song_button.pressed.connect(_on_select_song_button_pressed)
	menu_button.pressed.connect(_on_menu_button_pressed)

func show_menu():
	"""æ˜¾ç¤ºèœå•ï¼ˆå¸¦åŠ¨ç”»ï¼‰"""
	show()
	panel.modulate.a = 0.0
	panel.scale = Vector2(0.95, 0.95)
	
	var tween = create_tween()
	tween.set_parallel(true)
	tween.tween_property(panel, "modulate:a", 1.0, 0.25).set_ease(Tween.EASE_OUT)
	tween.tween_property(panel, "scale", Vector2(1.0, 1.0), 0.25).set_ease(Tween.EASE_OUT).set_trans(Tween.TRANS_BACK)

func update_ui_texts():
	var lang = Global.current_language
	title_label.text = TEXTS[lang]["title"]
	restart_button.text = TEXTS[lang]["restart"]
	select_song_button.text = TEXTS[lang]["select_song"]
	menu_button.text = TEXTS[lang]["menu"]

func set_score(score: int, lines: int, is_new_record: bool = false):
	var lang = Global.current_language
	var text = TEXTS[lang]["score"] % score + "\n" + TEXTS[lang]["lines"] % lines
	
	# è·å–æœ€é«˜åˆ†
	if Global.selected_song.has("name"):
		var high_score_data = Global.get_song_score(Global.selected_song["name"])
		text += "\n\n" + TEXTS[lang]["high_score"] % high_score_data["score"]
		text += "\n" + TEXTS[lang]["high_lines"] % high_score_data["lines"]
	
	# æ–°çºªå½•æç¤º
	if is_new_record:
		text += "\n\n" + TEXTS[lang]["new_record"]
	
	score_label.text = text

func _on_restart_button_pressed():
	restart_game.emit()

func _on_select_song_button_pressed():
	select_song.emit()

func _on_menu_button_pressed():
	goto_menu.emit()

func _input(event):
	# å½“èœå•æ˜¾ç¤ºæ—¶å¤„ç†é”®ç›˜è¾“å…¥
	if not visible:
		return
	
	if event.is_action_pressed("ui_accept"):  # Enteré”® - é‡æ–°å¼€å§‹
		_on_restart_button_pressed()
		get_tree().root.set_input_as_handled()
	elif event.is_action_pressed("ui_cancel"):  # ESCé”® - è¿”å›èœå•
		_on_menu_button_pressed()
		get_tree().root.set_input_as_handled()
